tests/parsing/smtlib/poly/errors/025_var_binding_bad_name_2.expected
File "tests/parsing/smtlib/poly/errors/025_var_binding_bad_name_2.psmt2", line 2, character 15-17:
2 | (assert (let ((as 42)) true))
                   ^^
Error while parsing a variable binding, read the reserved word 'as',
      but expected a symbol (i.e. variable name).
